--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.5",
     "vue": "^2.5.16",
+    "vue-infinite-loading": "^2.3.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.8"
   },
