--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.16",
     "vue-infinite-loading": "^2.3.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.8"
+    "vuetify": "^1.0.8",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
