--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "vue": "^2.5.16",
+    "vue-avatar": "^2.1.4",
     "vue-infinite-loading": "^2.3.1",
     "vue-router": "^3.0.1",
+    "vue-social-sharing": "^2.3.3",
     "vue-star-rating": "^1.6.0",
-    "vue-stripe": "^0.1.52",
+    "vue-stripe-checkout": "^1.0.4",
     "vue-video-player": "^5.0.2",
     "vuetify": "^1.0.8",
     "vuex": "^3.0.1"
